# ssau

./: .gitignore
Assembler/: Metodichka_1-5._Assembler.doc  Zadania_na_laboratornye_raboty_2015.doc  Лекция1.odt
Assembler/Labs/: Задания на лабораторные работы 2015.doc
DB/: VARIANTY_INDIVIDUAL_NYKh_ZADANIJ.docx  ~$Д_лаб1.docx  ~$Д_лаб2.docx  ~$Д_лаб3.docx  БД_лаб1.docx  БД_лаб2.docx  БД_лаб3.docx
Modeling/: Opisanie_yazyka_GPSS_World.doc  ~$isanie_yazyka_GPSS_World.doc
Modeling/GPSS World Student Version/: DeIsL1.isu  Gpssw.GID  Untitled Model 1.1.sim  Untitled.gps  artnastya.gps  gpssw.mem
Modeling/Labs/: 1_Вариант_23_Никитин.docx  2_Вариант_6_Никитин.docx  4_Вариант_8_Никитин.docx  6_Вариант_27_Никитин.docx  Вариант_23_Никитин.docx  Вариант_6_Никитин.docx  Вариант_8_Никитин.docx
Nets/: Lab1.xlsx  Otchet_Email_Nikitin.docx  Otchet_FTP_Nikitin.docx  Otchet_LR_2_Nikitin.docx
Nets/Email/: pom.xml
Nets/FTP/: pom.xml
Nets/WebParser/: pom.xml
OS/Labs/Lab4-8/Task1/: CMakeLists.txt  main.cpp
OS/Labs/Lab4-8/Task1/map/: Map.cpp  Map.h
OS/Labs/Lab4-8/Task1/map/tree/: Node.cpp  Node.h
OS/Labs/Lab4-8/Task6/: CMakeLists.txt  ling.txt  main.cpp
OS/Labs/Lab4-8/Task8/: CMakeLists.txt  main.cpp  modifyer.cpp
OS/Labs/Lab4-8/Task8/map/: Map.cpp  Map.h
OS/Labs/Lab4-8/Task8/map/tree/: Node.cpp  Node.h
TFAiG/: ~$дания_на_лаб_практикум.DOC  Задания_на_лаб_практикум.DOC  Отчет_Никитин_Вариант_12.docx  Учебное пособие_Теор_кон_авт_и_языков.doc
TFAiG/Graph/: Main.graphml
TFAiG/Task/: pom.xml
Temporary/mix.msk.ru/: index.html  mail.php
omni_landos/: PR_лого2.psd  kullogo_rab_post_var_2.eps  omni.ai  omni.eps  Оценка дизайнеров.docx  ТЗ.docx
(+292 files in other folders)
